[tool.poetry]
name = "zhihu"
version = "0.1.0"
description = ""
authors = ["menhuan <963633167@qq.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
pyppeteer = "^0.2.3"
pyquery = "^1.4.3"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
