[tool.poetry]
name = "zhihu"
version = "0.1.0"
description = ""
authors = ["menhuan <963633167@qq.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
pyppeteer = "^0.2.3"
pyquery = "^1.4.3"
pandas = "^1.2.0"
xlwt = "^1.3.0"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
